--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "vindicia-react",
+  "name": "vindicia-pmt-react",
   "version": "1.0.0",
-  "description": "React component for Vindicia payment library",
+  "description": "A React.js wrapper component for the Vindicia Payment Method Tokenization (PMT) system",
   "main": "build/index.js",
   "scripts": {
     "start": "webpack --watch",
