--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^2.1.0",
+    "enzyme": "^3.9.0",
+    "jest": "^24.1.0",
     "style-loader": "^0.23.1",
     "webpack-cli": "^3.2.3"
   }
