add test coverage, prelim tests

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
         "required": {
           "some": [ "nesting", "id"  ]
         }
-      }]
+      }],
+      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
     }
 }
