--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "start": "webpack --watch",
     "build": "webpack",
-    "lint": "eslint src/**/*.js src/**/*.jsx",
-    "test": "jest"
+    "lint": "eslint src/**/*.js",
+    "test": "jest --verbose",
+    "test:watch": "jest --watchAll --verbose",
+    "test:coverage": "jest --verbose --coverage"
   },
   "jest": {
-    "testEnvironment": "enzyme",
     "testEnvironmentOptions": {
       "enzymeAdapter": "react16"
     }
@@ -25,9 +26,8 @@
   "dependencies": {
     "acorn": "^6.1.0",
     "crypto-js": "^3.1.9-1",
-    "enzyme-adapter-react-16": "^1.10.0",
     "prop-types": "^15.7.2",
-    "react": "^16.8.1",
+    "react": "^16.8.3",
     "webpack": "^4.29.3"
   },
   "devDependencies": {
@@ -46,14 +46,17 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^2.1.0",
     "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.10.0",
     "eslint": "^5.15.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
     "jest": "^24.1.0",
+    "jest-diff": "^24.0.0",
     "jest-environment-enzyme": "^7.0.1",
     "jest-enzyme": "^7.0.1",
+    "react-dom": "^16.8.4",
     "style-loader": "^0.23.1",
     "webpack-cli": "^3.2.3"
   }
