--- a/package.json
+++ b/package.json
@@ -16,19 +16,17 @@
       "enzymeAdapter": "react16"
     }
   },
-  "repository": "git+https://github.com/projekt202/vindicia-react.git",
+  "repository": "git+https://github.com/vindicia/vindicia-pmt-react.git",
   "author": "Mick Johnson <mick.johnson@projekt202.com>",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/projekt202/vindicia-react/issues"
+    "url": "https://github.com/vindicia/vindicia-pmt-react/issues"
   },
-  "homepage": "https://github.com/projekt202/vindicia-react#readme",
+  "homepage": "https://github.com/vindicia/vindicia-pmt-react#readme",
   "dependencies": {
-    "acorn": "^6.1.0",
     "crypto-js": "^3.1.9-1",
     "prop-types": "^15.7.2",
-    "react": "^16.8.3",
-    "webpack": "^4.29.3"
+    "react": "^16.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
@@ -58,6 +56,8 @@
     "jest-enzyme": "^7.0.1",
     "react-dom": "^16.8.4",
     "style-loader": "^0.23.1",
-    "webpack-cli": "^3.2.3"
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.1"
   }
 }
