--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,6 @@
     "plugins": [
         "transform-object-rest-spread",
         "transform-react-jsx",
-        "@babel/plugin-proposal-class-properties"
+        "transform-class-properties"
     ]
 }
