--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^24.1.0",
     "jest-diff": "^24.0.0",
     "jest-environment-enzyme": "^7.0.1",
