--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   ],
   "dependencies": {
     "crypto-js": "^3.1.9-1",
+    "lodash": "^4.17.13",
     "prop-types": "^15.7.2",
     "react": "^16.8.3"
   },
