--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vindicia-pmt-react",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "A React.js wrapper component for the Vindicia Payment Method Tokenization (PMT) system",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -9,18 +9,18 @@
     "start": "webpack --watch",
     "build:commonjs": "cross-env BABEL_ENV=commonjs babel src --out-dir lib",
     "build:es": "cross-env BABEL_ENV=es babel src --out-dir es",
-    "build:umd": "cross-env BABEL_ENV=commonjs webpack src/index.js -o dist/vindicia-pmt-react.js --config webpack.config.prod.js --env.noMinimize",
-    "build:min": "cross-env BABEL_ENV=commonjs webpack src/index.js -o dist/vindicia-pmt-react.min.js --config webpack.config.prod.js",
+    "build:umd": "cross-env BABEL_ENV=commonjs webpack ./src/index.js -o dist/vindicia-pmt-react --config webpack.config.prod.js --env noMinimize",
+    "build:min": "cross-env BABEL_ENV=commonjs webpack ./src/index.js -o dist/vindicia-pmt-react.min --config webpack.config.prod.js",
     "build": "yarn run lint && yarn run build:commonjs && yarn run build:es && yarn run build:umd && yarn run build:min",
     "lint": "eslint src/**/*.js",
     "test": "jest --verbose",
     "test:watch": "jest --watchAll --verbose",
     "test:coverage": "jest --verbose --coverage",
-    "demo": "webpack-dev-server --content-base dist"
+    "demo": "webpack serve --content-base dist"
   },
   "jest": {
     "testEnvironmentOptions": {
-      "enzymeAdapter": "react16"
+      "enzymeAdapter": "react17"
     },
     "modulePathIgnorePatterns": [
       "<rootDir>/es/",
@@ -41,43 +41,46 @@
     "es"
   ],
   "dependencies": {
-    "crypto-js": "^3.1.9-1",
-    "handlebars": "^4.5.3",
-    "lodash": "^4.17.13",
+    "crypto-js": "^4.1.1",
+    "handlebars": "^4.7.7",
+    "lodash": "^4.17.21",
     "prop-types": "^15.7.2",
-    "react": "^16.8.3"
+    "react": "^17.0.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
+    "@babel/cli": "^7.14.8",
+    "@babel/core": "^7.14.8",
+    "@babel/preset-env": "^7.14.8",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.5.0",
-    "babel-loader": "^8.0.5",
+    "babel-jest": "^27.0.6",
+    "babel-loader": "^8.2.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^7.0.0-beta.3",
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "cross-env": "^5.2.0",
-    "css-loader": "^2.1.0",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.10.0",
+    "bufferutil": "^4.0.1",
+    "cross-env": "^7.0.3",
+    "css-loader": "^6.2.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-17-updated": "^1.0.2",
     "eslint": "^5.15.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
-    "html-webpack-plugin": "^3.2.0",
-    "jest": "^24.1.0",
-    "jest-diff": "^24.0.0",
-    "jest-environment-enzyme": "^7.0.1",
-    "jest-enzyme": "^7.0.1",
-    "react-dom": "^16.8.4",
-    "react-router-dom": "^5.0.1",
-    "style-loader": "^0.23.1",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3",
+    "html-webpack-plugin": "^5.3.1",
+    "jest": "^27.0.6",
+    "jest-diff": "^27.0.6",
+    "jest-environment-enzyme": "^7.1.2",
+    "jest-enzyme": "^7.1.2",
+    "node-notifier": "^10.0.0",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
+    "style-loader": "^3.2.1",
+    "utf-8-validate": "^5.0.2",
+    "webpack": "^5.46.0",
+    "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.2.1"
   }
 }
