--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "jest-diff": "^27.0.6",
     "jest-environment-enzyme": "^7.1.2",
     "jest-enzyme": "^7.1.2",
+    "jsdom-global": "^3.0.2",
     "node-notifier": "^10.0.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
